main: fixed sig align

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,8 @@ h2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    left: -22px;
+    position: relative;
 }
 
 .sigCanvas2 {
@@ -69,6 +71,7 @@ h2 {
     top: 804px;
     width: 370px;
     height: 260px;
+    pointer-events: none;
 }
 
 .shared-input {
